@@ -1,9 +1,12 @@
 package com.blogstack.entity.pojo.mapper;
 
+import com.blogstack.beans.responses.AnswerMasterResponseBean;
 import com.blogstack.beans.responses.QuestionMasterResponseBean;
 import com.blogstack.entities.BlogStackQuestionMaster;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -16,7 +19,8 @@ public interface IBlogStackQuestionMasterEntityPojoMapper {
             .codeSnippet(blogStackQuestionMaster.getBsqmCodeSnippet())
             .categoryId(blogStackQuestionMaster.getBsqmCategoryId())
             .subCategoryId(blogStackQuestionMaster.getBsqmSubCategoryId())
-            .blogStackAnswers(blogStackQuestionMaster.getBlogStackAnswerMasterList())
+            //.blogStackAnswers((Set<AnswerMasterResponseBean>) IBlogStackAnswerMasterEntityPojoMapper.mapAnswerMasterEntityListToPojoListMapping.apply(blogStackQuestionMaster.getBlogStackAnswerMasterList()))
+            .blogStackAnswers(blogStackQuestionMaster.getBlogStackAnswerMasterList()==null? new HashSet<AnswerMasterResponseBean>() : (Set<AnswerMasterResponseBean>) IBlogStackAnswerMasterEntityPojoMapper.mapAnswerMasterEntityListToPojoListMapping.apply(blogStackQuestionMaster.getBlogStackAnswerMasterList()))
             .status(blogStackQuestionMaster.getBsqmStatus())
             .addedOn(blogStackQuestionMaster.getBsqmCreatedDate())
             .build();
@@ -31,9 +35,9 @@ public interface IBlogStackQuestionMasterEntityPojoMapper {
                         .codeSnippet(blogStackQuestionMaster.getBsqmCodeSnippet())
                         .categoryId(blogStackQuestionMaster.getBsqmCategoryId())
                         .subCategoryId(blogStackQuestionMaster.getBsqmSubCategoryId())
-                        .blogStackAnswers(blogStackQuestionMaster.getBlogStackAnswerMasterList())
+                        .blogStackAnswers((Set<AnswerMasterResponseBean>) IBlogStackAnswerMasterEntityPojoMapper.mapAnswerMasterEntityListToPojoListMapping.apply(blogStackQuestionMaster.getBlogStackAnswerMasterList()))
                         .status(blogStackQuestionMaster.getBsqmStatus())
                         .addedOn(blogStackQuestionMaster.getBsqmCreatedDate());
                 return questionMasterResponseBeanBuilder.build();
-            }).collect(Collectors.toList());
+            }).toList();
 }
